# ai-inventory-2

./: .env.example  .gitignore  CLAUDE.md  MIGRATION.md  README.md  capacitor.config.ts  index.html  ip.js  package-lock.json  package.json  postcss.config.mjs  tsconfig.json  vercel.json  vite.config.ts
android/: capacitor.settings.gradle
android/app/: build.gradle  capacitor.build.gradle
assets/: build-android-splash-icon.mjs  build-icon.mjs  build-ios-splash-logo.mjs  build-macos-icon.mjs  build-pwa-splash.mjs  build-splash.mjs  fix-cap-assets.mjs
docs/: AI_CHAT_BACKEND.md  BACKEND_PLAN.md  COMPLETENESS_WAVES.md
ios/App/App/: App.entitlements  AppDelegate.swift  Info.plist
ios/App/App.xcodeproj/: project.pbxproj
ios/App/CapApp-SPM/: Package.swift
public/: manifest.json  robots.txt
public/.well-known/: README.md  apple-app-site-association  assetlinks.json
src/: App.tsx  index.css  main.tsx  routes.ts  sw.js
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.ios.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json  pos-hardware.json
src-tauri/icons/: icon.icns
src-tauri/plugins/pallio-fcm/: Cargo.toml
src-tauri/plugins/pallio-fcm/android/: TODO.md
src-tauri/plugins/pallio-fcm/ios/: TODO.md
src-tauri/plugins/pallio-fcm/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src/app/: layout.tsx  page.tsx
src/app/actions/: sales.ts
src/app/ai/: page.tsx
src/app/analytics/: page.tsx
src/app/appointments/: page.tsx
src/app/expenses/: page.tsx
src/app/inventory/: page.tsx
src/app/marketing/: page.tsx
src/app/notifications/: page.tsx
src/app/pos/: page.tsx
src/app/reporting/: page.tsx
src/app/settings/: page.tsx
src/components/: app-frame.tsx  app-sidebar.tsx  avatar.tsx  biometric-gate.tsx  brand-mark.tsx  export-buttons.tsx  info-tooltip.tsx  inventory-list.tsx  inventory-table.tsx  kpi-card.tsx  mode-toggle.tsx  network-banner.tsx  notification-list.tsx  org-location-switch.tsx  page-shell.tsx  product-thumb.tsx  profile-sheet.tsx  pwa-installer.tsx  rich-text-editor.tsx  route-transition.tsx  theme-toggle.tsx  top-movers.tsx  top-selling.tsx  tw-theme-provider.tsx
src/components/app/: notification-bell.tsx  user-menu.tsx  workspace-switcher.tsx
src/components/auth/: role-guard.tsx
src/components/charts/: inventory-charts.tsx
src/components/command/: command-palette.tsx  sources.ts
src/components/commissions/: commission-rules-sheet.tsx
src/components/dashboard/: kpi-carousel.tsx  kpi-stat-card.tsx  low-stock-card.tsx  open-pos-card.tsx  quick-actions-card.tsx  recent-sales-card.tsx  section-header.tsx  storefront-snapshot.tsx
src/components/dialogs/: add-appointment-dialog.tsx  add-customer-dialog.tsx  add-discount-dialog.tsx  add-expense-dialog.tsx  add-location-dialog.tsx  add-printer-dialog.tsx  add-supplier-dialog.tsx  add-tax-rate-dialog.tsx  add-vendor-dialog.tsx  add-warehouse-dialog.tsx
src/components/forms/: form-aside.tsx  form-field.tsx  form-footer.tsx  form-grid.tsx  form-section.tsx  form-shell.tsx  input-addon.tsx  switch-field.tsx
src/components/help/: glossary-link.tsx
src/components/insights/: activity-feed.tsx  forecast-card.tsx  insight-card.tsx  restock-card.tsx
src/components/integrations/: connect-modal.tsx  connection-chip.tsx  integration-config.tsx
src/components/lists/: empty-state.tsx  filter-button.tsx  filter-chips.tsx  filter-sheet.tsx  list-skeleton.tsx  status-badge.tsx  summary-strip.tsx
src/components/marketing/: campaign-shell.tsx  channel-shell.tsx  laptop-frame.tsx  laptop-mock.tsx  listing-form.tsx  marketing-frame.tsx  phone-frame.tsx  phone-mock.tsx  sign-in-modal.tsx  whatsapp-button.tsx
src/components/mobile/: bottom-sheet.tsx  mobile-bottom-nav.tsx  (+4 more)
src/contexts/: command-palette.tsx  currency.tsx  page-meta.tsx
src/hooks/: use-auto-mark-step.ts  use-back-button.tsx  use-biometric.tsx  use-chat-keyboard.tsx  use-deep-links.tsx  use-native.tsx  use-network-status.tsx  use-org-location.tsx  use-passkey.ts  use-pull-to-refresh.tsx  use-share.tsx
src/lib/: nav.ts  platform.ts  webauthn.ts
src/pages/: index.tsx
(+427 files in other folders)
