[package]
name = "pallio"
version = "1.2.0"
description = "Pallio — inventory, POS, storefront, and accounting for Nigerian SMBs"
authors = ["Pallio"]
edition = "2021"
rust-version = "1.77.2"

# Tauri 2 mobile builds a static library that's linked into the iOS /
# Android shell. Desktop builds a cdylib so the bundled binary can
# load it. `rlib` keeps cargo-check + cargo-doc working.
[lib]
name = "pallio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

# Official plugins
tauri-plugin-store              = "2"
tauri-plugin-haptics            = "2"
tauri-plugin-os                 = "2"
tauri-plugin-deep-link          = "2"
tauri-plugin-notification       = "2"
tauri-plugin-sql                = { version = "2", features = ["sqlite"] }
tauri-plugin-shell              = "2"
tauri-plugin-dialog             = "2"
tauri-plugin-fs                 = "2"
tauri-plugin-clipboard-manager  = "2"
tauri-plugin-process            = "2"
tauri-plugin-opener             = "2"

# Community plugin (share to other apps via OS share sheet)
tauri-plugin-sharesheet = "0.0"

# POS-critical hardware integrations
# - barcode-scanner: official, uses device camera on iOS/Android.
# - keep-screen-on: community, prevents the till from sleeping.
tauri-plugin-barcode-scanner = "2"
tauri-plugin-biometric        = "2"
tauri-plugin-keep-screen-on   = "0"

# Standard helpers used by our plugins + future custom commands
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Desktop + Android only (skipped on iOS).
# - thermal-printer: community, ESC/POS receipts (USB / Bluetooth /
#   network thermal printers — Star, Epson TM, Citizen, etc). The
#   crate ships Android + desktop native sources but no iOS Swift,
#   so its build.rs panics on `aarch64-apple-ios*` targets.
# - serialport: community, talks to cash drawers (opens via signal
#   from the printer), weighing scales, USB barcode guns that
#   present as serial devices. iOS has no equivalent (sandboxed,
#   no USB host) — would never work even if it compiled.
[target.'cfg(not(target_os = "ios"))'.dependencies]
tauri-plugin-thermal-printer  = "2"
tauri-plugin-serialplugin     = "2"

# Desktop-only plugins (skipped on iOS / Android builds where they
# don't apply).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater          = "2"
tauri-plugin-single-instance  = "2"
tauri-plugin-window-state     = "2"
tauri-plugin-autostart        = "2"
