# Custom Tauri plugin for Firebase Cloud Messaging (Android) +
# APNs-bridged FCM (iOS). Wraps the Firebase iOS SDK + the
# firebase-messaging Android library. Exposes commands:
#
#   register_for_push()  -> Promise<{ token: string }>
#   unregister()         -> Promise<void>
#   on_message(cb)       -> Listener
#
# This file is a SCAFFOLD. The Swift + Kotlin implementations live
# under android/ and ios/. To finish:
#   1. Add Firebase to your Apple developer account + Google Cloud
#      project, download GoogleService-Info.plist + google-services.json.
#   2. Drop those config files into src-tauri/gen/apple/ and
#      src-tauri/gen/android/app/ after running `tauri ios init` /
#      `tauri android init`.
#   3. Implement the Swift / Kotlin functions in this folder's
#      ios/ and android/ subdirectories (templates included with
#      TODO markers).
#   4. Register this plugin in src-tauri/src/lib.rs via
#      `.plugin(tauri_plugin_pallio_fcm::init())`.

[package]
name        = "tauri-plugin-pallio-fcm"
version     = "0.1.0"
edition     = "2021"
description = "FCM push notifications for Pallio mobile"
license     = "MIT"

[lib]
name       = "tauri_plugin_pallio_fcm"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri      = { version = "2" }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"
log        = "0.4"
